--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   image_picker: ^1.1.2
+  firebase_storage: ^12.3.3
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
@@ -41,6 +42,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  moon_icons: ^1.1.0
 
 dev_dependencies:
   flutter_test:
