--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
+  image_picker: ^1.1.2
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
