--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
     git:
       url: https://github.com/coingaming/moon_flutter.git
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  moon_icons: ^1.1.0
 
 dev_dependencies:
   flutter_test:
