--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   moon_icons: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
