--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.3
   path_provider: ^2.1.5
+  flutter_dotenv: ^5.0.2
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
@@ -80,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/hestimate_logo_black_1024.png
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
