--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.3
   path_provider: ^2.1.5
+  url_launcher: ^6.0.0
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
