--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.3
   path_provider: ^2.1.5
+  url_launcher: ^6.0.0
   flutter_dotenv: ^5.0.2
+  phone_numbers_parser: ^8.3.0
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
