--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   url_launcher: ^6.3.0
   phone_numbers_parser: ^8.3.0
+  fl_chart: ^0.68.0
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
