--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^13.0.1
   path_provider: ^2.1.5
+  cached_network_image: ^3.3.1
+  shimmer: ^3.0.0
+  photo_view: ^0.14.0
   flutter_dotenv: ^6.0.0
   url_launcher: ^6.3.0
   phone_numbers_parser: ^8.3.0
