--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.0
   phone_numbers_parser: ^8.3.0
   fl_chart: ^0.68.0
+  cloud_functions: ^6.0.1
   moon_design:
     git:
       url: https://github.com/coingaming/moon_flutter.git
